; ModuleID = '/home/carl/AnghaBench/git/extr_blame.c_init_scoreboard.c'
source_filename = "/home/carl/AnghaBench/git/extr_blame.c_init_scoreboard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blame_scoreboard = type { i32, i32 }

@BLAME_DEFAULT_MOVE_SCORE = common dso_local global i32 0, align 4
@BLAME_DEFAULT_COPY_SCORE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_scoreboard(%struct.blame_scoreboard* %0) #0 {
  %2 = alloca %struct.blame_scoreboard*, align 8
  store %struct.blame_scoreboard* %0, %struct.blame_scoreboard** %2, align 8
  %3 = load %struct.blame_scoreboard*, %struct.blame_scoreboard** %2, align 8
  %4 = call i32 @memset(%struct.blame_scoreboard* %3, i32 0, i32 8)
  %5 = load i32, i32* @BLAME_DEFAULT_MOVE_SCORE, align 4
  %6 = load %struct.blame_scoreboard*, %struct.blame_scoreboard** %2, align 8
  %7 = getelementptr inbounds %struct.blame_scoreboard, %struct.blame_scoreboard* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 4
  %8 = load i32, i32* @BLAME_DEFAULT_COPY_SCORE, align 4
  %9 = load %struct.blame_scoreboard*, %struct.blame_scoreboard** %2, align 8
  %10 = getelementptr inbounds %struct.blame_scoreboard, %struct.blame_scoreboard* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  ret void
}

declare dso_local i32 @memset(%struct.blame_scoreboard*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
